--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       DATASOURCE_URL: jdbc:postgresql://db:5432/${DB_NAME}
       DB_USERNAME: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
+      JWT_EXPIRY: ${JWT_EXPIRY}
     volumes:
       - ./todo-backend/src:/app/src
       - ./todo-backend/pom.xml:/app/pom.xml
