adds register dto and custom validators

--- a/todo-backend/src/main/resources/application.properties
+++ b/todo-backend/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=${DB_PASSWORD}
 spring.application.name=todo-app
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.security.jwt.secret-key=${JWT_SECRET_KEY\:secret}
+spring.security.oauth2.jwt.secret-key=
 spring.security.jwt.expiration-time=${JWT_EXPIRY\:3600000}
