--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,11 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       JWT_EXPIRY: ${JWT_EXPIRY}
+      JAVA_TOOL_OPTIONS: "-Dlog4j2.debug=true"
     volumes:
       - ./todo-backend/src:/app/src
       - ./todo-backend/pom.xml:/app/pom.xml
+      - ./todo-backend/logs:/app/logs
     healthcheck:
       test:
         [
