--- a/todo-backend/src/main/resources/application.properties
+++ b/todo-backend/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.password=${DB_PASSWORD}
 spring.application.name=todo-app
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.security.oauth2.jwt.secret-key=
-spring.security.jwt.expiration-time=${JWT_EXPIRY\:3600000}
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
