--- a/todo-backend/pom.xml
+++ b/todo-backend/pom.xml
@@ -161,6 +161,15 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+            	<version>3.0.0-M5</version>
+            	<configuration>
+                	<reportFormat>brief</reportFormat>
+                	<outputDirectory>${project.build.directory}/surefire-reports</outputDirectory>
+            	</configuration>
+        	</plugin>
 		</plugins>
 	</build>
 
