--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -12,6 +12,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      CI_ENVIRONMENT: true
+      JWT_SECRET_KEY: 94e246493200f07be7d94a2b7ca9cfde1488aae068bd80cd2b9706ab57bc33eb
+      JWT_EXPIRY: 3600000
 
     steps:
       - name: Checkout repository
@@ -33,16 +37,10 @@ jobs:
       - name: Build with Maven
         run: mvn clean install
         working-directory: todo-backend
-        env:
-          JWT_SECRET_KEY: 94e246493200f07be7d94a2b7ca9cfde1488aae068bd80cd2b9706ab57bc33eb
-          JWT_EXPIRY: 3600000
 
       - name: Run tests
         run: mvn test
         working-directory: todo-backend
-        env:
-          JWT_SECRET_KEY: 94e246493200f07be7d94a2b7ca9cfde1488aae068bd80cd2b9706ab57bc33eb
-          JWT_EXPIRY: 3600000
 
       - name: Upload Test Results
         if: always()
