adds CI log directory

--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI_ENVIRONMENT: true
+      CI_LOG_DIRECTORY: /tmp/logs
       JWT_SECRET_KEY: 94e246493200f07be7d94a2b7ca9cfde1488aae068bd80cd2b9706ab57bc33eb
       JWT_EXPIRY: 3600000
 
