--- a/todo-backend/pom.xml
+++ b/todo-backend/pom.xml
@@ -102,6 +102,13 @@
         <scope>test</scope>
     </dependency>
 
+	<dependency>
+   		 <groupId>com.github.javafaker</groupId>
+    	<artifactId>javafaker</artifactId>
+    	<version>1.0.2</version>
+   		<scope>test</scope>
+	</dependency>
+
     <!-- REST Assured -->
     <dependency>
         <groupId>io.rest-assured</groupId>
