--- a/todo-backend/src/main/resources/application.properties
+++ b/todo-backend/src/main/resources/application.properties
@@ -6,4 +6,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=dev
+logging.config=classpath:log4j2-${spring.profiles.active}.xml
 
+# JWT Configuration
+jwt.secret-key=${JWT_SECRET_KEY}
+jwt.expiration-time=${JWT_EXPIRY}
+
+# Cloud Logging configuration
+spring.cloud.gcp.logging.enabled=true
