--- a/todo-backend/app.yaml
+++ b/todo-backend/app.yaml
@@ -13,5 +13,5 @@ env_variables:
   DB_NAME: ${sm://DB_NAME}
   DB_PASSWORD: ${sm://DB_PASSWORD}
   DB_USER: ${sm://DB_USER}
-  JWT_EXPIRY: ${sm://JWT_EXPIRY}
+  JWT_EXPIRY: '86400000'
   JWT_SECRET_KEY: ${sm://JWT_SECRET_KEY}
