--- a/todo-backend/src/main/resources/application.properties
+++ b/todo-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=${DATASOURCE_URL\:jdbc\:mysql\://localhost\:3306/employees_project}
 spring.datasource.username=${DB_USERNAME\:root}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.database=postgresql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.application.name=todo-app
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
